--- a/css/style.css
+++ b/css/style.css
@@ -982,7 +982,13 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 	padding-bottom: 20px;
 	display: inline-block;
 }
-
+/* 도희 */
+.section-sub-title {
+	position: relative;
+	padding-bottom: 20px;
+	display: inline-block;
+}
+/* 끝 */
 .section-title:before {
 	content: "";
 	position: absolute;
@@ -996,6 +1002,18 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 /* 	width: 30px; */
 /* background: #1A374D; */
 }
+
+/* 도희 */
+.section-sub-title:before {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	height: 2px;
+	background: #808080;
+	width:1100px;
+}
+/* 끝 */
 
 .section-title.text-center:before {
 	left: 50%;
