--- a/css/style.css
+++ b/css/style.css
@@ -2011,6 +2011,7 @@ opacity
 	content: "\e8b4";
 }
 /* 도희 */
+/* 상단 서브 메뉴 */
 .list_sub_menu{
 	margin:0;
 	padding:0;
@@ -2029,6 +2030,16 @@ opacity
 	list-style-type: none;
 	display: inline-block;
 }
+/*  */
+/* 상단 서브 메뉴 링크 밑줄 표시 */
+.untree_co-section .list_sub_menu ._sub a{
+	cursor: pointer;
+	text-decoration: none;
+}
+.untree_co-section .list_sub_menu ._sub a:hover{
+	text-decoration: underline;
+}
+/*  */
 .p-text-align{
 	text-align: center;
 	margin-bottom:8px;
@@ -2042,6 +2053,7 @@ opacity
 .p-text-align-tour{
 	text-align: center;
 }
+/* MAP/LIST 백그라운드 */
 .container .map_wrap{
 	position: relative; margin: 0 auto 20px auto; background: rgba(26, 55, 77, 0.05);
 }
@@ -2061,6 +2073,8 @@ opacity
 	width: 830px; height:500px; border:1px solid #aaa;
 	display:block; margin: auto;
 }
+/*  */
+/* MAP/LIST 링크 밑줄 표시 */
 .map_tab_wrap .map_tab_1 a{
 	cursor:pointer;
 	text-decoration: none;
@@ -2081,6 +2095,7 @@ opacity
 .map_tab_wrap .map_tab_2 a:hover{
 	text-decoration: underline;
 }
+/*  */
 /* 끝  */
 #review{
 	width: 1123px;
